# TMBRefugeChecker

./: README.md  pyproject.toml
.github/: copilot-instructions.md
montblanc/: gui.py  logic.py  main.py  planner.py  scraper.py  trail_data.py  types.py
montblanc/refuges/: __init__.py  du_lac_blanc.py  elena.py
montblanc/web/: app.py
montblanc/web/static/: app.js  style.css
montblanc/web/templates/: index.html
tests/: test_caching.py  test_elena.py  test_lac_blanc.py  test_refuges.py  test_scraper.py
