[tool.poetry]
name = "montblanc"
version = "0.2.0"
description = ""
authors = ["Wyko ter Haar <wyko.ter.haar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.25.2"
cachetools = "^5.3.2"
tqdm = "^4.66.1"
pyinstaller = "^6.3.0"
pytimes = "^1.11.0"
beautifulsoup4 = "^4.12.2"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "W", "C901"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

[tool.poetry.scripts]
montblanc = 'montblanc.main:app'
